--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "multiplayer-space-snake",
   "version": "2.0.0",
-  "description": "Multiplayer snake game in space",
+  "description": "Multiplayer snake game in space - AKA  SpaceSnake",
   "keywords": [],
   "license": "ISC",
   "bugs": {
