--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "colors": ">=1.4.0",
     "express": ">=4.17.1",
+    "ocsp": "^1.2.0",
     "unique-names-generator": ">=4.3.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v18.10.0"
   }
