--- a/package.json
+++ b/package.json
@@ -28,9 +28,12 @@
   },
   "main": "app.js",
   "scripts": {
-    "test": "node --debug --use_strict app.js",
-    "inspect": "node --inspect app.js",
-    "start": "node app.js"
+    "nodetest": "node --debug --use_strict app.js",
+    "buntest": "bun --debug --use_strict app.js",
+    "nodeinspect": "node --inspect app.js",
+    "buninspect": "bun --inspect app.js",
+    "nodestart": "node app.js",
+    "bunstart": "bun app.js"
   },
   "dependencies": {
     "colors": ">=1.4.0",
