--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "nodetest": "node --debug --use_strict app.js",
     "buntest": "bun --debug --use_strict app.js",
     "nodeinspect": "node --inspect app.js",
     "buninspect": "bun --inspect app.js",
@@ -39,6 +38,7 @@
   "dependencies": {
     "colors": ">=1.4.0",
     "express": ">=4.18.2",
+    "hono": ">=3.2.7",
     "ocsp": "^1.2.0",
     "unique-names-generator": ">=4.7.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.30.0"
